Update 'd0zbyz6kb-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:aa0cddde74d2faf5c808fdce34081b818e9bc556@sha256:f363c0c35aff251f9bfea5626b76d663fffd4469e213124a9250b24a558d42e0

--- a/components/d0zbyz6kb-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/d0zbyz6kb-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: d0zbyz6kb-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:aa0cddde74d2faf5c808fdce34081b818e9bc556@sha256:f363c0c35aff251f9bfea5626b76d663fffd4469e213124a9250b24a558d42e0
+          name: container-image
